fix double scroll on custom modal

--- a/src/app/components/shared/common/CustomModal/CustomModal.module.css
+++ b/src/app/components/shared/common/CustomModal/CustomModal.module.css
@@ -36,5 +36,5 @@ SPDX-License-Identifier: MPL-2.0
 .scrollArea {
   flex: 1;
   min-height: 0;
-  overflow: auto;
+  overflow-y: auto;
 }
